--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
     "react-live-clock": "^6.1.0",
+    "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
     "react-skycons": "^0.8.8",
     "skycons": "^1.0.0",
